# profile-rest-api

./: .aliases  .gitignore  .readthedocs.yaml  Makefile  README.md  Vagrantfile  pyproject.toml
doc/: conf.py  django.inv  getting-started.rst  index.rst
doc/_static/: favicon.ico-autosave.kra
doc/apps/: index.rst
doc/apps/global/: index.rst  models.rst
doc/apps/profile-api/: index.rst  models.rst
doc/django-primer/: index.rst  links.rst  models.rst
doc/django-primer/django-rest/: index.rst  view-set.rst
doc/references/: api-doc.rst  django-rest.rst  doc-cheat-sheet.rst  environment-setup.rst  getting-started.rst  index.rst  links.rst  project_setup.md
src/: schema.yml
src/profile_api/: apps.py  models.py  serializers.py  urls.py  views.py
src/profile_api/migrations/: 0001_initial.py
src/profile_api/serializers/: __init__.py  profile.py
src/profile_api/views/: __init__.py  hello_view.py  hello_view_set.py  user_profile_view_set.py
src/profiles_project/: settings.py  urls.py
