[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Laurent Brack", email = "laurent.brack@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.26.4",
    "django-extensions>=3.2.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
dev = [
    "Ipython>=7.16.3",
]
doc = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-click>=5.0.1",
    "sphinxcontrib-images>=0.9.4",
]
lint = [
    "black>=23.7.0",
    "flake8>=5.0.4",
]
django = [
    "pygraphviz>=1.11",
]
